[package]
name = "callisto-sync"
version = "0.1.0"
authors = ["andrekorol <anrobits@yahoo.com.br>"]
edition = "2018"
description = "Tools to sync data between e-Callisto and NeoCallisto"
license= "MIT"
repository="https://github.com/andrekorol/callisto-sync"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloud-storage = "0.6"
tokio = { version = "0.3", features = ["full"] }
tokio-compat-02 = "0.1"